fix: mock table list overflow hidden

--- a/src/workbench/browser/src/app/shared/components/monaco-editor/monaco-editor.component.scss
+++ b/src/workbench/browser/src/app/shared/components/monaco-editor/monaco-editor.component.scss
@@ -6,9 +6,10 @@
   flex-direction: column;
   height: 100%;
   overflow: hidden;
+  border: 1px solid var(--BORDER);
 }
 .button_list {
-  border: 1px solid var(--BORDER);
+  border-bottom: 1px solid var(--BORDER);
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
   width: 100%;
